# Robust-Q-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: demo.yaml  primary.yaml
data/raw/: ecdc_earsnet_ecoli_carbapenems_all_years_raw.csv  ecdc_earsnet_ecoli_carbapenems_all_years_raw.metadata.json  ecdc_earsnet_ecoli_fluoroquinolones_all_years_raw.csv  ecdc_earsnet_ecoli_fluoroquinolones_all_years_raw.metadata.json  ecdc_earsnet_ecoli_third_generation_cephalosporins_all_years_raw.csv  ecdc_earsnet_ecoli_third_generation_cephalosporins_all_years_raw.metadata.json
docs/: final_results.md  literature_review.md  submission_audit.md
output/documents/: EARS-Net_Q-Learning_Abstract.docx
site/: index.html
src/ears_q_learning/: __init__.py  __main__.py  cli.py  config.py  constants.py  data.py  economic_pressure.py  evaluation.py  learning.py  mdp.py  model_selection.py  penalty_sensitivity.py  pipeline.py  preprocessing.py  reporting.py  reproducibility.py  state_space.py  stewardship_reward.py  stewardship_training.py  types.py  walkthrough.py  wasserstein.py  weighting_sensitivity.py
tests/: conftest.py  test_data_validation.py  test_demo_config.py  test_economic_pressure.py  test_evaluation.py  test_kernel_and_rewards.py  test_learning.py  test_model_selection.py  test_penalty_sensitivity.py  test_pipeline.py  test_reporting.py  test_repository_inputs.py  test_state_and_preprocessing.py  test_stewardship_reward.py  test_submission_claims.py  test_walkthrough.py  test_wasserstein.py  test_weighting_sensitivity.py
